mises en forme minimalistes : espace perso

--- a/templates/profile/account.html.twig
+++ b/templates/profile/account.html.twig
@@ -1,27 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Yeah! - Espace personnel{% endblock %}
+{% block title %} Yeah! - Vos informations personnelles{% endblock %}
 
 {% block body %}
 
-<main id="layoutSidenav_content">
+<main class="noPadding" id="layoutSidenav_content">
+
+    {% for message in app.flashes('success') %}
+    <div class="alert alert-success noPadding" role="alert">{{ message }}</div>
+    {% endfor %}
 
     <div class="container-fluid">
     
         <h1 class="m-5">Vos informations personnelles</h1>
 
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 pb-5 pl-5">
                 <div class="pt-3 pb-2">
                     <p class="d-inline p-3"><span class="font-weight-bold">Prénom : </span> {{ user.firstname }}</p>
                     <p class="d-inline p-3"><span class="font-weight-bold">Nom : </span> {{ user.lastname }}</p>    
-            
                 </div>
                 <div class="pb-3">
                     <p class="d-block px-3"><span class="font-weight-bold">Adresse email : </span> {{ user.email }}</p>
                     <p class="d-block px-3"><span class="font-weight-bold">Téléphone : </span> {{ user.phone }}</p>
                 </div>
-                <div class="pb-3">
+                <div>
                     <p class="p-3"><span class="font-weight-bold">Entreprise(s) d'affiliation : </span></p>   
                     <ul>
                         {% for compagny in  user.compagnies %}
@@ -33,7 +36,7 @@
                         {% endfor %}
                     </ul>  
                 </div>
-                <a class="button pinkBackground" type="button" href="{{ path('profile_change_details', { 'id': user.id }) }}">Modifier</a>    
+                <a class="button pinkBackground ml-5" type="button" href="{{ path('profile_change_details', { 'id': user.id }) }}">Modifier</a>    
             </div>    
         
             <div class="col-6">
