--- a/templates/profile/changeDetails.html.twig
+++ b/templates/profile/changeDetails.html.twig
@@ -1,35 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Yeah! - Espace personnel{% endblock %}
+{% block title %} Yeah! - Vos informations personnelles{% endblock %}
 
 {% block body %}
 
 <main id="layoutSidenav_content">
-
     <div class="container-fluid">
-    
         <h1 class="m-5">Modifier vos informations personnelles</h1>
-
-        <div class="row">
-
-        
+        <div class="w-50 mx-auto">
             {{ form_start(form) }}
             {{ form_row(form.firstname) }}
             {{ form_row(form.lastname) }}
             {{ form_row(form.email) }}
             {{ form_row(form.phone) }}
             {{ form_row(form.compagny) }}
-
             <button class="btn pinkBackground mb-4 mt-4" type="submit">Valider </button>
             {{ form_end(form) }}
-
         </div>
-
-
-
-
-    
-
     </div>
 </main>
 
