page favoris ok

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
                         </a>
                     </li>#}
                     <li>
-                        <a href="" title="Favoris">
+                        <a href="{{ path('myfavorite', {id: app.user.id }) }}" title="Favoris">
                             <i class="las la-heart"></i>
                             <span>Favoris</span>
                         </a>
