--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -21,7 +21,7 @@
                 <a class="dropdown-item" href="{{ path('profile_orders_record') }}" title="Historique de vos commandes">Historique de vos commandes</a>
             </li>
             <li class="list-group-item">
-            
+                <a class="dropdown-item" href="{{ path('myfavorite', {id: app.user.id }) }}" title="Vos articles favoris">Vos articles favoris</a>
             </li>
         </ul>
     </div>    
