responsive upload img depot annonce

--- a/templates/admin/users/index.html.twig
+++ b/templates/admin/users/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Liste des utilisateurs{% endblock %}
 
 {% block body %}
-
+<main>
     <h1 class=" titre mb-4 pt-4 text-center">Liste des utilisateurs</h1>
 
     <section class="fond">
@@ -43,5 +43,5 @@
             </div>
         </div>
     </section>
-
+</main>
 {% endblock %}
