--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -114,7 +114,7 @@
         {# js pour affichage de la carte #}
         <script src="{{ asset('js/map.js') }}"></script>
         {# js pour favoris #}
-        <script src="{{ asset('js/favoris.js') }}"></script>
+        <script src="{{ asset('js/inputfile.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
