--- a/templates/home/_listAnnouncements.html.twig
+++ b/templates/home/_listAnnouncements.html.twig
@@ -72,26 +72,16 @@
             
             <div>
                 {% if app.user %}
-                    {% for favoris in announcement.favoris %}
-                        {% if favoris == app.user %}
+                    {% if announcement in app.user.favoris %}
                          <a href="{{ path('retrait_favoris', {id: announcement.id}) }}" class="coeur"><i class="las la-heart "></i></a> 
-                         {# <i  class="las la-heart"></i> #}
-                         {% else %}
-                           <a href="{{ path('ajout_favoris', {id: announcement.id}) }}" class="coeur"><i class="lar la-heart "></i></a> 
-                            {# <i  class="lar la-heart"></i> #}
-                        {% endif %}
-                    {% else %}
+                     {% else %}
                     <a href="{{ path('ajout_favoris', {id: announcement.id}) }}" class="coeur"><i class="lar la-heart"></i></a> 
-                         {# <i  class="lar la-heart"></i> #}
-                    {% endfor %}
-
+                    {% endif %}
                 {% else %}
                     <a href="{{ path('ajout_favoris', {id: announcement.id}) }}" class="coeur"><i class="lar la-heart"></i></a> 
-                     {# <i  class="lar la-heart"></i> #}
                 {% endif %}
-                   
             </div>
-            
+
             <div class="buttonList">
                 <button type="button" class="button darkGreyBackground" data-toggle="modal" data-target="#shareAnnoncement{{ announcement.id }}Modal">Partager</button>
                 {#<a href="#" type="button" class=" button darkGreyBackground">Recommander</a>
