--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Yeah-Inscription{% endblock %}
 
 {% block body %}
-
+<main>
    <div class="w-100 mx-auto fond pt-85">
         <div class="w-50 mx-auto formulaire">
             <h1 class="text-center titre mb-4 pt-4">Inscription</h1>  
@@ -21,4 +21,5 @@
             </div>
         </div>
     </div>
+</main>    
 {% endblock %}
