--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,7 @@ a:hover {
     text-decoration: none;
 }
 
+
 /* Fin Propriétés globales */
 
 /*Backgrounds*/
@@ -270,33 +271,23 @@ main section p {
 #map {
     display: none;
 }
-
 /* Fin Page Index */
 
 /* Page dépot d'annonce */
-
-/*.partie_haut{
-    width: 100%;
-    justify-content: center;
-    display: flex;
+.div-file{
+    /* background-color: white; */
+    /* border: 1px solid #fb3199; */
+    box-shadow:#fb3199 ;
+    background: linear-gradient(#ebf2e3,pink, #ebf2e3);
+}
+.label-file{
+    cursor: pointer;
+    font-weight: bold;
+    width: 100px;
+    height: 100px;
+    font-size: 20px;
 }
 
-.partie_note{
-    width: 100%;
-    justify-content: center;
-    display: flex;
-}
-.partie_note > div:first-child > div:last-child input{
- width: 100%;
- height: 150px;
- 
-}
-.partie_bas{
-    width: 100%;
-    justify-content: center;
-    display: flex;
-}
-*/
 /* Fin page dépot d'annonce */
 
 /* Page register and login */
@@ -326,6 +317,10 @@ main section p {
     text-align: center;
   }
   
+  .coeur{
+    font-size: 30px;
+    color: red;
+}
 /* Fin Page register and login */
 
 /*Footer*/
@@ -533,17 +528,8 @@ main section p {
         right: 0;
         touch-action: pan-x pan-y;
     }
-  .label-file{
-    cursor: pointer;
-    
-    font-weight: bold;
-    width: 100px;
-    height: 100px;
-  }
   
-  .label-file:hover {
-    color: #25a5c4;
-}
+  
 .img-file{
     position: absolute;
     margin-top: 3px;
@@ -552,18 +538,29 @@ main section p {
     width: 1px;
     z-index: -5;
 }
-.coeur{
-    font-size: 30px;
-    color: red;
-}
-
-
-
     footer {
         width: 60%;
     }
 
 }
-/* Fin Vue ordinateur*/
 
+/* Depot d'annonce */
+.div-file{
+    /* background-color: white; */
+    /* border: 1px solid #fb3199; */
+    box-shadow:#fb3199 ;
+    
+    background: linear-gradient(#ebf2e3, #fb3199, #ebf2e3);
+}
+.label-file{
+    cursor: pointer;
+    font-weight: bold;
+    width: 100px;
+    height: 100px;
+    font-size: 20px;
+}
+/* Fin Vue ordinateur*/
+.selector{
+    width: 20em;
+}
 
