--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -6,17 +6,18 @@
 <main class="fond pt-85">
     <div class="container mx-auto">
     {{ form_start(form) }}
-    <div class="row m-3 ">
+    <div class="row mt-4">
+       
         {# premiere partie #}
-        <div class="col-2">
-            <div class="bg-light labelI">
+        <div class="col-sm-12 col-md-12 col-lg-2">
+            <div class="div-file text-center text-white pt-4">
                 {{ form_row(form.imageFile) }}
-                {# <i class="las la-plus"></i> #}
+               
             </div>
         </div>
 
         {# deuxieme partie #}
-        <div class="col-5">
+        <div class="col-sm-12 col-md-12 col-lg-5">
 
                 <div class="m-1">
                     <p class="font-weight-bold">Choisissez le secteur d'activité de votre annonce</p>
@@ -49,9 +50,13 @@
                 {{ form_row(form.key_words) }}
             </div>
         </div>
+   
+      
+       
+      
         
         {# troisieme partie #}
-        <div class="col-5 float-right">
+        <div class="col-sm-12 col-md-12 col-lg-5">
             <div>
                 {{ form_widget(form.activity_sector) }}
                 {{ form_errors(form.activity_sector)}}
@@ -87,7 +92,9 @@
             </div>
         </div>
     </div>
+   
     {{ form_end(form) }}
     </div>
+    
 </main>
 {% endblock %}
