--- a/templates/admin/users/index.html.twig
+++ b/templates/admin/users/index.html.twig
@@ -4,9 +4,11 @@
 
 {% block body %}
 <main>
-    <h1 class=" titre mb-4 pt-4 text-center">Liste des utilisateurs</h1>
+ <div class="col-sm-12 col-md-12 col-lg-12 mx-auto">
+ <div class="m-4"> <h1 class=" titre mb-4 pt-4 text-center">Liste des utilisateurs</h1> </div>
+    
 
-    <section class="fond">
+    <section class="fond row">
         <div class="container ">
             <div class="col-10 mx-auto">
                 <table class="table">
@@ -43,5 +45,6 @@
             </div>
         </div>
     </section>
+    </div>
 </main>
 {% endblock %}
