--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -10,9 +10,8 @@
        
         {# premiere partie #}
         <div class="col-sm-12 col-md-12 col-lg-2">
-            <div class="div-file text-center text-white pt-4">
+            <div class="div-file text-center text-dark pt-4">
                 {{ form_row(form.imageFile) }}
-               
             </div>
         </div>
 
@@ -51,10 +50,6 @@
             </div>
         </div>
    
-      
-       
-      
-        
         {# troisieme partie #}
         <div class="col-sm-12 col-md-12 col-lg-5">
             <div>
