--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %} Yeah! - Accueil{% endblock %}
 
 {% block body %}
-    <main>
+    <main class="pt-85">
         <div>
             <!--Présentation entreprise-->
             <section>
