--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<main id="layoutSidenav_content">
+<main id="layoutSidenav_content" class="fond">
 
     <div class="container-fluid">
 
