--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -3,16 +3,14 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
-<main>
-    <div class="w-100 mx-auto fond">
-        <div class="w-50 mx-auto formulaire">
+<main class="pt-85">
+    <div class=" mx-auto fond">
         <h1 class="titre mb-4 pt-4 text-center">Rénitialiser votre mot de passe</h1>
 
         {{ form_start(resetForm) }}
             {{ form_row(resetForm.plainPassword) }}
             <button class="btn pinkBackground mb-4 mt-4">Rénitialiser le mot de passe</button>
         {{ form_end(resetForm) }}
-        </div>
     </div>
 </main>
 {% endblock %}
