--- a/templates/profile/cartPayment.html.twig
+++ b/templates/profile/cartPayment.html.twig
@@ -14,7 +14,7 @@
         <div id="card-errors" role="alert"></div>
         <div class="mt-5">
 
-            <button id="card-button" type="button" data-secret="{{ stripe.client_secret }}" class="bg-blue-500 text-white rounded py-3 px-5 text-center mx-auto bouton" title="Payer">Régler mon panier</button>
+            <button id="card-button" type="button" data-secret="{{ stripe.client_secret }}" class="bg-blue-500 rounded py-3 px-5 text-center mx-auto bouton" title="Payer">Régler mon panier</button>
 
             <p class="text-gray-500 text-center mt-4 w-full block">Le paiement s'effectue en toute sécurité via notre partenaire <a href="https://www.stripe.com/fr" title="Stripe">Stripe</a>.</p>
         </div>
