bug fix : pdf download

--- a/templates/profile/billDownload.html.twig
+++ b/templates/profile/billDownload.html.twig
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Yeah! - Votre commande </title>
+    <style type="text/css">
+        {{ fileGetContents( '../public/css/styles.min.css' )  }}
+        {{ fileGetContents( '../public/css/stylesPDF.min.css' ) }}
+    </style>
 </head>
 
 <body>
