--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,12 +15,12 @@ a:hover {
 /*Backgrounds*/
 .pinkBackground {
     color: white;
-    background-color: #fb3199;
+    background-color: #3e31fb;
 }
 
 .violetBackground {
     color: white;
-    background-color: #6b40a1;
+    background-color: #a14040;
 }
 
 .darkGreyBackground {
@@ -56,7 +56,7 @@ header .btn {
 }
 
 header h1 {
-    color: #fb3199;
+    color: #3e31fb;
     font-size: 20px;
     font-weight: 300;
     grid-column: 1/3;
@@ -99,7 +99,7 @@ header nav .la-bars {
 /* Page Index */
 
 main {
-    background-color: #ebf2e3; 
+    background-color: #9bbdca; 
     padding : 25px;
 }
 
@@ -110,7 +110,7 @@ main section {
 }
 
 main section h1 {
-    color: #6b40a1;
+    color: #a14040;
     font-size: 30px;
     font-weight: bold;
     margin: 5px 0 30px 0;
@@ -118,11 +118,11 @@ main section h1 {
 }
 
 main section p {
-    color: #6b40a1;
+    color: #a14040;
 }
 
 .pinkText {
-    color: #fb3199;
+    color: #3e31fb;
     font-weight: bold;
 }
 .blackText {
@@ -488,14 +488,14 @@ background-color: #FF6600
   }
 
   .fond {
-      background-color: #ebf2e3;
+      background-color: #9bbdca;
   }
 
   .fond > .formulaire > button{
-      color: #ebf2e3;
+      color: #9bbdca;
   }
   .titre {
-    color: #6b40a1;
+    color: #a14040;
     font-size: 30px;
     font-weight: bold;
     margin: 5px 0 30px 0;
