--- a/templates/admin/base_admin.html.twig
+++ b/templates/admin/base_admin.html.twig
@@ -72,6 +72,9 @@
         {% block body %}{% endblock %}
 
         {# DEBUT FOOTER #}
+        <footer>
+        <p>Paul, Stéphane, Wiame, Youness, Lauralee</p>
+        </footer>
         {# FIN FOOTER #}
 
         <!-- JS, Popper.js, and jQuery -->
